src/objects/Pledges__c.object
<CustomObject>
    <description>This tab will be used for pledges and pledge payments</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Pledges</relationshipLabel>
        <relationshipName>R00N700000022mc3EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pledges</relationshipLabel>
        <relationshipName>R00N700000022mdCEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Pledge_Installments__c</fullName>
        <description># of Pledge installments on pledge</description>
        <label># Pledge Installments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pledges</relationshipLabel>
        <relationshipName>R00N700000022mc4EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pledge_Amount__c</fullName>
        <label>Pledge Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pledge_End_Date__c</fullName>
        <description>Calcuates pledge end date by subtracking length of pledge from pledge start date</description>
        <formula>(No_Pledge_Installments__c*30.416) + Pledge_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pledge End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pledge_ID__c</fullName>
        <displayFormat>P-{0000}-{MM}-{YYYY}</displayFormat>
        <label>Pledge ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pledge_Payment_Installment_Amount__c</fullName>
        <description>Calculates the pledge payment amount by the pledge amount by the number of months</description>
        <formula>Pledge_Amount__c  /  No_Pledge_Installments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pledge Payment Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pledge_Start_Date__c</fullName>
        <description>Date that Pledge begins</description>
        <label>Pledge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pledge_Status__c</fullName>
        <label>Pledge Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Designation__c</fullName>
        <label>Program Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Pledges</label>
    <nameField>
        <label>Pledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pledges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>